cbits/Bullet.h

int gIM_PAIR_m_index2_get(void *c); //attribute: int gIM_PAIR->m_index2
void* gIM_QUANTIZED_BVH_NODE_ARRAY_new(); //constructor: GIM_QUANTIZED_BVH_NODE_ARRAY  ( ::GIM_QUANTIZED_BVH_NODE_ARRAY::* )(  ) 
void gIM_QUANTIZED_BVH_NODE_ARRAY_free(void *c);
 
void* gIM_TRIANGLE_CONTACT_new(); //constructor: GIM_TRIANGLE_CONTACT  ( ::GIM_TRIANGLE_CONTACT::* )(  ) 
void gIM_TRIANGLE_CONTACT_free(void *c);
 
//not supported method: merge_points void ( ::GIM_TRIANGLE_CONTACT::* )( ::btVector4 const &,::btScalar,::btVector3 const *,int ) 
// error: ::btVector4 const & - ok, ::btScalar - ok,  - unsupported, int - ok, void - ok

void gIM_TRIANGLE_CONTACT_copy_from(void *c,void* p0); //method: copy_from void ( ::GIM_TRIANGLE_CONTACT::* )( ::GIM_TRIANGLE_CONTACT const & ) 
void gIM_TRIANGLE_CONTACT_m_penetration_depth_set(void *c,float a); //attribute: ::btScalar gIM_TRIANGLE_CONTACT->m_penetration_depth
float gIM_TRIANGLE_CONTACT_m_penetration_depth_get(void *c); //attribute: ::btScalar gIM_TRIANGLE_CONTACT->m_penetration_depth
void gIM_TRIANGLE_CONTACT_m_point_count_set(void *c,int a); //attribute: int gIM_TRIANGLE_CONTACT->m_point_count
int gIM_TRIANGLE_CONTACT_m_point_count_get(void *c); //attribute: int gIM_TRIANGLE_CONTACT->m_point_count
// attribute not supported: //attribute: ::btVector3[16] gIM_TRIANGLE_CONTACT->m_points
void gIM_TRIANGLE_CONTACT_m_separating_normal_set(void *c,float* a); //attribute: ::btVector4 gIM_TRIANGLE_CONTACT->m_separating_normal
void gIM_TRIANGLE_CONTACT_m_separating_normal_get(void *c,float* a);
void* btGImpactMeshShapePart_TrimeshPrimitiveManager_new0(); //constructor: TrimeshPrimitiveManager  ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )(  ) 
void* btGImpactMeshShapePart_TrimeshPrimitiveManager_new1(void* p0,int p1); //constructor: TrimeshPrimitiveManager  ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )( ::btStridingMeshInterface *,int ) 
void btGImpactMeshShapePart_TrimeshPrimitiveManager_free(void *c);
 
int btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex_count(void *c); //method: get_vertex_count int ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )(  ) const
void btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex(void *c,int p0,float* p1); //method: get_vertex void ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )( int,::btVector3 & ) const
int btGImpactMeshShapePart_TrimeshPrimitiveManager_is_trimesh(void *c); //method: is_trimesh bool ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )(  ) const
void btGImpactMeshShapePart_TrimeshPrimitiveManager_lock(void *c); //method: lock void ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )(  ) 
void btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_box(void *c,int p0,void* p1); //method: get_primitive_box void ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )( int,::btAABB & ) const
void btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_triangle(void *c,int p0,void* p1); //method: get_primitive_triangle void ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )( int,::btPrimitiveTriangle & ) const
void btGImpactMeshShapePart_TrimeshPrimitiveManager_unlock(void *c); //method: unlock void ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )(  ) 
void btGImpactMeshShapePart_TrimeshPrimitiveManager_get_bullet_triangle(void *c,int p0,void* p1); //method: get_bullet_triangle void ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )( int,::btTriangleShapeEx & ) const
int btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_count(void *c); //method: get_primitive_count int ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )(  ) const
//not supported method: get_indices void ( ::btGImpactMeshShapePart::TrimeshPrimitiveManager::* )( int,int &,int &,int & ) const
// error: int - ok,  - unsupported,  - unsupported,  - unsupported, void - ok

void btGImpactMeshShapePart_TrimeshPrimitiveManager_m_margin_set(void *c,float a); //attribute: ::btScalar btGImpactMeshShapePart_TrimeshPrimitiveManager->m_margin
float btGImpactMeshShapePart_TrimeshPrimitiveManager_m_margin_get(void *c); //attribute: ::btScalar btGImpactMeshShapePart_TrimeshPrimitiveManager->m_margin
void btGImpactMeshShapePart_TrimeshPrimitiveManager_m_meshInterface_set(void *c,void* a); //attribute: ::btStridingMeshInterface * btGImpactMeshShapePart_TrimeshPrimitiveManager->m_meshInterface