Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_PAIR_m_index2_get    `( GIM_PAIRClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * GIM_QUANTIZED_BVH_NODE_ARRAY
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#98>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun gIM_QUANTIZED_BVH_NODE_ARRAY_new as gIM_QUANTIZED_BVH_NODE_ARRAY    {  } -> `GIM_QUANTIZED_BVH_NODE_ARRAY' mkGIM_QUANTIZED_BVH_NODE_ARRAY* #}
{#fun gIM_QUANTIZED_BVH_NODE_ARRAY_free    `( GIM_QUANTIZED_BVH_NODE_ARRAYClass bc )' =>     { withBt* `bc'  } -> `()' #}
-- * GIM_TRIANGLE_CONTACT
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_new as gIM_TRIANGLE_CONTACT    {  } -> `GIM_TRIANGLE_CONTACT' mkGIM_TRIANGLE_CONTACT* #}
{#fun gIM_TRIANGLE_CONTACT_free    `( GIM_TRIANGLE_CONTACTClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_copy_from as gIM_TRIANGLE_CONTACT_copy_from    `( GIM_TRIANGLE_CONTACTClass bc , GIM_TRIANGLE_CONTACTClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ other
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_m_penetration_depth_set    `( GIM_TRIANGLE_CONTACTClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_m_penetration_depth_get    `( GIM_TRIANGLE_CONTACTClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_m_point_count_set    `( GIM_TRIANGLE_CONTACTClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_m_point_count_get    `( GIM_TRIANGLE_CONTACTClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_m_separating_normal_set    `( GIM_TRIANGLE_CONTACTClass bc )' =>     { withBt* `bc' , withVec4* `Vec4'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp?r=2223>
-}
{#fun gIM_TRIANGLE_CONTACT_m_separating_normal_get    `( GIM_TRIANGLE_CONTACTClass bc )' =>     { withBt* `bc' , allocaVec4-  `Vec4'  peekVec4* } -> `()' #}
-- * TrimeshPrimitiveManager
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#545>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_new0 as btGImpactMeshShapePart_TrimeshPrimitiveManager0    {  } -> `BtGImpactMeshShapePart_TrimeshPrimitiveManager' mkBtGImpactMeshShapePart_TrimeshPrimitiveManager* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#578>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_new1 as btGImpactMeshShapePart_TrimeshPrimitiveManager1    `( BtStridingMeshInterfaceClass p0 )' =>     {  withBt* `p0' ,  `Int'  } -> `BtGImpactMeshShapePart_TrimeshPrimitiveManager' mkBtGImpactMeshShapePart_TrimeshPrimitiveManager* #}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_free    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#633>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex_count as btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex_count    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#656>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex as btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ vertex_index
, withVec3* `Vec3'  peekVec3* -- ^ vertex
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#656>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex as btGImpactMeshShapePart_TrimeshPrimitiveManager_get_vertex'    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ vertex_index
, allocaVec3-  `Vec3'  peekVec3* -- ^ vertex
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#623>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_is_trimesh as btGImpactMeshShapePart_TrimeshPrimitiveManager_is_trimesh    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#596>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_lock as btGImpactMeshShapePart_TrimeshPrimitiveManager_lock    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#674>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_box as btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_box    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc , BtAABBClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ prim_index
, withBt* `p1'  -- ^ primbox
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#683>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_triangle as btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_triangle    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc , BtPrimitiveTriangleClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ prim_index
, withBt* `p1'  -- ^ triangle
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#610>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_unlock as btGImpactMeshShapePart_TrimeshPrimitiveManager_unlock    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#693>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_get_bullet_triangle as btGImpactMeshShapePart_TrimeshPrimitiveManager_get_bullet_triangle    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc , BtTriangleShapeExClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ prim_index
, withBt* `p1'  -- ^ triangle
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#628>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_count as btGImpactMeshShapePart_TrimeshPrimitiveManager_get_primitive_count    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#531>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_margin_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#531>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_margin_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#532>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_meshInterface_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc , BtStridingMeshInterfaceClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#532>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
